// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anciennete /> should display error if anciennté < 8mois 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  L’indemnité de licenciement est dûe au-delà de 8 mois d’ancienneté
</div>
`;

exports[`<Anciennete /> should display error if anciennté < 12mois and licenciement in 2017 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  L’indemnité de licenciement est dûe au-delà de 12 mois d’ancienneté
</div>
`;

exports[`<Anciennete /> should display error if dateEntre after dateSortie 1`] = `
.c0 {
  color: #53657d;
  font-weight: 600;
  font-size: 0.875rem;
}

<span
  class="c0"
>
  La date de sortie doit se situer après le
  <strong>
     
    02 April 2018
  </strong>
</span>
`;

exports[`<Anciennete /> should display error if dateEntree after dateNotif 1`] = `null`;

exports[`<Anciennete /> should display error if dateNotif after dateSortie 1`] = `null`;

exports[`<Anciennete /> should render 1`] = `
.c3 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: auto;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.c1 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c4 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <h2
    class="c0"
  >
    Dates d’entrée et de sortie de l’entreprise
  </h2>
  <label
    class="c1"
    for="1"
  >
    Quelle est votre date d’entrée dans l’entreprise ?
  </label>
  <div
    class="c2"
  >
    <input
      class="c3"
      id="1"
      name="dateEntree"
      type="date"
      value=""
    />
  </div>
  <label
    class="c1"
    for="2"
  >
    À quelle date votre licenciement vous a-t-il été notifié ?
  </label>
  <div
    class="c2"
  >
    <input
      class="c3"
      id="2"
      name="dateNotification"
      type="date"
      value=""
    />
  </div>
  <label
    class="c1"
    for="3"
  >
    Quelle est votre date de sortie de l’entreprise (incluant la durée de votre préavis) ?
  </label>
  <div
    class="c2"
  >
    <input
      class="c3"
      id="3"
      name="dateSortie"
      type="date"
      value=""
    />
  </div>
  <h2
    class="c0"
  >
    Période d’absence prolongée (plus d’un mois)
  </h2>
  <p
    class="c4"
  >
    Avez-vous eu des périodes d’absence de plus d’un mois au cours de votre contrat ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        name="hasAbsenceProlonge"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasAbsenceProlonge"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  
</div>
`;
